--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,7 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/build" }
+      "config": { "distDir": "build" } 
     }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
-
