--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,14 @@
   "builds": [
     {
       "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" } 
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "cd frontend && npm install && npm run build",
+        "outputDirectory": "frontend/build"
+      }
     }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/frontend/build/$1" }
   ]
 }
